--- a/BlogViewer/Storyboard.storyboard
+++ b/BlogViewer/Storyboard.storyboard
@@ -486,15 +486,19 @@
                                                 <constraint firstAttribute="width" constant="103" id="VIt-xW-qPM"/>
                                             </constraints>
                                         </imageView>
+                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="C9i-0c-2cW"/>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="1UX-2E-ICj" firstAttribute="centerX" secondItem="o8r-g8-61m" secondAttribute="centerX" type="default" id="aaY-v1-qBE"/>
-                                    <constraint firstItem="1UX-2E-ICj" firstAttribute="centerY" secondItem="o8r-g8-61m" secondAttribute="centerY" type="default" id="cfu-fs-8h0"/>
+                                    <constraint firstItem="C9i-0c-2cW" firstAttribute="centerX" secondItem="1UX-2E-ICj" secondAttribute="centerX" type="default" id="4Qz-BK-B7d"/>
+                                    <constraint firstItem="C9i-0c-2cW" firstAttribute="centerY" secondItem="o8r-g8-61m" secondAttribute="centerY" type="default" id="7C8-QK-02u"/>
+                                    <constraint firstItem="C9i-0c-2cW" firstAttribute="centerX" secondItem="o8r-g8-61m" secondAttribute="centerX" type="default" id="9sg-5Q-LUs"/>
+                                    <constraint firstItem="C9i-0c-2cW" firstAttribute="centerY" secondItem="1UX-2E-ICj" secondAttribute="centerY" type="default" id="fIS-nn-9Es"/>
                                 </constraints>
                                 <size key="customSize" width="106.59999999999999" height="106.59999999999999"/>
                                 <connections>
+                                    <outlet property="cellindicator" destination="C9i-0c-2cW" id="706-hF-6AB"/>
                                     <outlet property="imageview" destination="1UX-2E-ICj" id="sJc-5G-EYf"/>
                                     <segue destination="NYx-Jq-paN" kind="push" id="IO4-0E-cJT"/>
                                 </connections>
@@ -786,7 +790,9 @@
                         </prototypes>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="お気に入り" id="T6u-qZ-fQF"/>
-                    <navigationItem key="navigationItem" title="お気に入り" id="Rjh-j6-Qt5"/>
+                    <navigationItem key="navigationItem" title="お気に入り" id="Rjh-j6-Qt5">
+                        <barButtonItem key="rightBarButtonItem" id="0EG-ZR-KoT"/>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cvn-SN-awR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1044,123 +1050,6 @@
         <image name="setting.png" width="30" height="30"/>
         <image name="star.png" width="30" height="30"/>
     </resources>
-    <classes>
-        <class className="AppinfoCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AppinfoCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_appinfo" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="ApptitleCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ApptitleCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_appname" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_copyright" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_icon" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="_version" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BlogCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BlogCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_blogtitle" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_thumbnail" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="_updated" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BlogItemsViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BlogItemsViewController.h"/>
-        </class>
-        <class className="BlogsViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BlogsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="pressRefreshButton:"/>
-            </relationships>
-        </class>
-        <class className="FavoriteViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/FavoriteViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_editbutton" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="ImageCell" superclassName="UICollectionViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ImageCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageview" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="ImagesViewController" superclassName="UICollectionViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ImagesViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="pressRefreshButton:"/>
-            </relationships>
-        </class>
-        <class className="ItemCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ItemCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_blogtitle" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_itemtitle" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_thumbnail" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="_updated" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="ItemsViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ItemsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="pressRefreshButton:"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="OtherViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OtherViewController.h"/>
-        </class>
-        <class className="ScrollCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ScrollCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_blogLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_dateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_itemLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="ScrollViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ScrollViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="pressSaveButton:"/>
-                <relationship kind="outlet" name="_scrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="_tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="UICollectionReusableView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
-        </class>
-        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
-        </class>
-        <class className="UICollectionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
-        </class>
-        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
-        </class>
-        <class className="UICollectionViewLayout" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
-        </class>
-        <class className="WebViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WebViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="pressFavoriteButton:"/>
-                <relationship kind="action" name="showActionsheet:"/>
-                <relationship kind="outlet" name="_favoritebutton" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="_gobackbutton" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="_goforwardbutton" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="_indicator" candidateClass="UIActivityIndicatorView"/>
-                <relationship kind="outlet" name="_refreshbutton" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="_webview" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
